fix: navbar logo and nav link spacing

--- a/frontend/src/scss/theme/_links.scss
+++ b/frontend/src/scss/theme/_links.scss
@@ -7,7 +7,7 @@ $link-hover-color: rgba($secondary, .7);
 	$nav-link-font-size: rem(24);
 }
 
-$navbar-brand-margin-end: rem(50);
+$navbar-brand-margin-end: rem(38);
 $nav-link-font-weight: $btn-font-weight;
 $navbar-light-color: $clr-neutral-4;
 $navbar-light-hover-color: $secondary;
